--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-unicorn": "^59.0.0",
-    "eslint-plugin-vue": "^9.33.0",
+    "eslint-plugin-vue": "^10.0.1",
+    "globals": "^16.0.0",
     "isoworker": "^0.2.4",
     "prettier": "^3.5.3",
     "rollup": "^4.40.1",
