--- a/deployment/report-aggregator/templates/ingress.yaml
+++ b/deployment/report-aggregator/templates/ingress.yaml
@@ -86,3 +86,10 @@ spec:
                 name: backend
                 port:
                   number: 80
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend
+                port:
+                  number: 80
