--- a/dashboard/new-dashboard/resources/projects/kotlin_projects.json
+++ b/dashboard/new-dashboard/resources/projects/kotlin_projects.json
@@ -84,6 +84,9 @@
         "intellij_commit/highlight/UIAutomationInteractionModel.Generated_with_library_cache",
         "kotlin_lang/highlight/LazyJVM_with_library_cache"
       ],
+      "intelliJ3": [
+        "intellij_commit/highlight/GHGQLDataTest_with_library_cache_k2"
+      ],
       "kotlinLang": [
         "kotlin_lang/highlight/CommonParser_with_library_cache",
         "kotlin_lang/highlight/FirErrors_with_library_cache",
