--- a/.github/workflows/ej-issue.yml
+++ b/.github/workflows/ej-issue.yml
@@ -1,13 +1,23 @@
 name: Junie
+run-name: Junie run ${{ inputs.run_id }}
+
+permissions:
+  contents: write
+  pull-requests: write
+  packages: read
 
 on:
-  issues:
-    types: [opened]
-  issue_comment:
-    types: [created]
-  pull_request_review_comment:
-    types: [created]
+  workflow_dispatch:
+    inputs:
+      run_id:
+        description: "id of workflow process"
+        required: true
+      workflow_params:
+        description: "stringified params"
+        required: true
 
 jobs:
-  junie:
-    uses: JetBrains/junie-workflows/.github/workflows/ej-issue.yml@main
+  call-workflow-passing-data:
+    uses: jetbrains-junie/junie-workflows/.github/workflows/ej-issue.yml@main
+    with:
+      workflow_params: ${{ inputs.workflow_params }}
