Disable new linters and fix the remaining new one

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,6 +31,8 @@ linters:
     - goconst
     - gochecknoinits
     - contextcheck
+    - noinlineerr
+    - wsl_v5
   settings:
     errcheck:
       check-type-assertions: true
