--- a/dashboard/new-dashboard/resources/projects/kotlin_projects.json
+++ b/dashboard/new-dashboard/resources/projects/kotlin_projects.json
@@ -191,7 +191,8 @@
       ],
       "syntheticFiles": [
         "kotlin_synthetic_files/highlight/repro1_with_library_cache",
-        "kotlin_synthetic_files/highlight/repro2_with_library_cache"
+        "kotlin_synthetic_files/highlight/repro2_with_library_cache",
+        "kotlin_synthetic_files/highlight/many_library_dependencies/Usage_with_library_cache"
       ]
     },
     "moveFiles": {
