--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
+    "@eslint/js": "^9.30.1",
     "@primevue/auto-import-resolver": "^4.3.5",
     "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-vue": "^6.0.0",
-    "@vue/eslint-config-typescript": "^14.5.1",
-    "eslint": "^9.29.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-unicorn": "^59.0.1",
-    "eslint-plugin-vue": "^10.2.0",
-    "globals": "^16.2.0",
+    "eslint-plugin-vue": "^10.3.0",
+    "globals": "^16.3.0",
     "isoworker": "^0.2.4",
     "prettier": "^3.6.2",
     "rollup": "^4.44.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "unplugin-vue-components": "^28.7.0",
+    "typescript-eslint": "^8.35.1",
+    "unplugin-vue-components": "^28.8.0",
     "vite": "^7.0.0",
     "vite-plugin-static-copy": "^3.1.0",
     "vitest": "^3.2.4",
     "vue": "^3.5.17",
-    "vue-tsc": "3.0.0-alpha.2"
+    "vue-tsc": "3.0.1"
   },
   "packageManager": "pnpm@10.12.2",
   "engines": {
