--- a/.github/workflows/ej-issue.yml
+++ b/.github/workflows/ej-issue.yml
@@ -20,4 +20,4 @@ jobs:
   call-workflow-passing-data:
     uses: jetbrains-junie/junie-workflows/.github/workflows/ej-issue.yml@main
     with:
-      workflow_params: ${{ inputs.workflow_params }}
+      workflow_params: "${{ inputs.workflow_params }}"
