Update golangci and disable noctx which forces `InfoContext` and `ErrorContext` and they don't have sense

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,6 +33,7 @@ linters:
     - contextcheck
     - noinlineerr
     - wsl_v5
+    - noctx
   settings:
     errcheck:
       check-type-assertions: true
