Switch to "bunlder" resolution
- this allows to update to new primevue theme
- this is a recommended approach for web apps

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -16,7 +16,7 @@
     "module": "preserve",
     "jsx": "preserve",
     "noEmit": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "newLine": "LF",
     "sourceMap": true,
     "lib": ["esnext", "dom"],
