Fix golangci-lint 2.5.0

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,6 +33,7 @@ linters:
     - contextcheck
     - noinlineerr
     - wsl_v5
+    - unqueryvet
   settings:
     errcheck:
       check-type-assertions: true
