--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -13,7 +13,8 @@
     "primevue": "4.4.0",
     "rxjs": "8.0.0-alpha.14",
     "vue": "3.5.22",
-    "vue-router": "4.5.1"
+    "vue-router": "4.5.1",
+    "pragmastat": "3.1.29"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.4",
