--- a/dashboard/new-dashboard/package.json
+++ b/dashboard/new-dashboard/package.json
@@ -3,24 +3,24 @@
   "private": true,
   "dependencies": {
     "@heroicons/vue": "2.2.0",
-    "@primevue/core": "^4.4.0",
+    "@primevue/core": "^4.4.1",
     "@vueuse/core": "^13.9.0",
     "echarts": "6.0.0",
     "fast-equals": "5.3.2",
     "humanize-duration": "3.33.1",
     "p-limit": "^7.1.1",
     "pinia": "^3.0.3",
-    "primevue": "4.4.0",
+    "pragmastat": "3.1.30",
+    "primevue": "4.4.1",
     "rxjs": "8.0.0-alpha.14",
     "vue": "3.5.22",
-    "vue-router": "4.5.1",
-    "pragmastat": "3.1.29"
+    "vue-router": "4.5.1"
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.4",
     "@types/sanitize-html": "^2.16.0",
     "global-jsdom": "^27.0.0",
     "jsdom": "^27.0.0",
-    "msw": "^2.11.3"
+    "msw": "^2.11.5"
   }
 }
