--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^3.2.4",
     "vue": "^3.5.22",
-    "vue-tsc": "3.1.1"
+    "vue-tsc": "3.1.1",
+    "oxlint": "^1.23.0"
   },
   "packageManager": "pnpm@10.17.1",
   "engines": {
