--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
+    "@eslint/js": "^9.38.0",
     "@primevue/auto-import-resolver": "^4.4.1",
     "@tailwindcss/vite": "^4.1.14",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "eslint": "^9.37.0",
+    "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -27,18 +27,18 @@
     "eslint-plugin-vue": "^10.5.1",
     "globals": "^16.4.0",
     "isoworker": "^0.2.4",
+    "oxlint": "^1.23.0",
     "prettier": "^3.6.2",
-    "rollup": "^4.52.4",
+    "rollup": "^4.52.5",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
-    "unplugin-vue-components": "^29.1.0",
-    "vite": "^7.1.10",
+    "unplugin-vue-components": "^30.0.0",
+    "vite": "^7.1.11",
     "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^3.2.4",
     "vue": "^3.5.22",
-    "vue-tsc": "3.1.1",
-    "oxlint": "^1.23.0"
+    "vue-tsc": "3.1.1"
   },
   "packageManager": "pnpm@10.17.1",
   "engines": {
