--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1",
     "unplugin-vue-components": "^30.0.0",
-    "vite": "^7.2.6",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^4.0.15",
     "vue": "^3.5.25",
