[kotlin] Add Code Typing tests to the dashboard
- A Code Typing test is a new kind of performance test that types a predefined input with deterministic completion and code analysis pauses.

^KT-82174

--- a/dashboard/new-dashboard/resources/projects/kotlin_projects.json
+++ b/dashboard/new-dashboard/resources/projects/kotlin_projects.json
@@ -223,6 +223,16 @@
         "kotlin_language_server/insertCode/SpecialJavaFileForTest_j2k"
       ]
     },
+    "codeTyping": {
+      "kotlinEmpty": [
+        "code_typing/Main_transform_string_explicit_type_with_library_cache",
+        "code_typing/Main_transform_string_implicit_type_with_library_cache"
+      ],
+      "kotlinLang": [
+        "code_typing/LLFirBodyLazyResolver_calculate_cfg_explicit_type_with_library_cache",
+        "code_typing/LLFirBodyLazyResolver_calculate_cfg_implicit_type_with_library_cache"
+      ]
+    },
     "optimizeImports": {
       "intelliJ": [
         "intellij_commit/otimizeImports/AbstractKotlinMavenImporterTest",
