--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,71 +1,110 @@
 {
   "$schema": "./node_modules/oxlint/configuration_schema.json",
-  "plugins": ["import", "vue", "vitest", "promise"],
+  "plugins": ["eslint", "typescript", "vue", "unicorn", "oxc", "vitest", "promise", "import"],
   "categories": {
-    "correctness": "warn",
-    "suspicious": "warn",
-    "pedantic": "warn",
-    "style": "warn",
-    "perf": "warn"
+    "correctness": "error",
+    "suspicious": "error",
+    "pedantic": "error",
+    "perf": "error",
+    "style": "error"
+  },
+  "env": {
+    "builtin": true,
+    "browser": true
   },
   "rules": {
-    "arrow-body-style": "off",
-    "avoid-new": "off",
-    "consistent-test-it": "off",
-    "curly": "off",
-    "default": "off",
-    "default-param-last": "off",
-    "eqeqeq": "off",
-    "exports-last": "off",
-    "func-names": "off",
-    "func-style": "off",
-    "group-exports": "off",
-    "id-length": "off",
-    "init-declarations": "off",
-    "max-classes-per-file": "off",
-    "max-dependencies": "off",
-    "max-depth": "off",
-    "max-expects": "off",
-    "max-lines": "off",
-    "max-lines-per-function": "off",
-    "max-params": "off",
-    "new-cap": "off",
-    "no-anonymous-default-export": "off",
-    "no-await-in-loop": "off",
-    "no-continue": "off",
-    "no-else-return": "off",
-    "no-hooks": "off",
-    "no-lonely-if": "off",
+    "no-relative-parent-imports": "off",
+    "no-null": "off",
     "no-magic-numbers": "off",
-    "no-mutable-exports": "off",
-    "no-named-export": "off",
-    "no-namespace": "off",
-    "no-negated-condition": "off",
-    "no-nested-ternary": "off",
-    "no-ternary": "off",
-    "no-unassigned-import": "off",
-    "no-warning-comments": "off",
-    "param-names": "off",
-    "prefer-await-to-callbacks": "off",
-    "prefer-await-to-then": "off",
-    "prefer-default-export": "off",
-    "prefer-destructuring": "off",
-    "prefer-each": "off",
-    "prefer-lowercase-title": "off",
-    "prefer-strict-equal": "off",
-    "prefer-template": "off",
-    "prefer-to-be": "off",
-    "promise/always-return": "off",
-    "radix": "off",
-    "require-hook": "off",
-    "require-top-level-describe": "off",
-    "require-typed-ref": "off",
-    "sort-imports": "off",
+    "max-statements": "off",
     "sort-keys": "off",
-    "sort-vars": "off",
+    "no-named-export": "off",
+    "no-ternary": "off",
+    "id-length": "off",
+    "unicorn/no-null": "off",
+    "unicorn/filename-case": "off",
+    "sort-imports": "off",
+    "exports-last": "off",
+    "max-lines": "off",
+    "group-exports": "off",
+    "max-lines-per-function": "off",
+    "func-style": "off",
     "capitalized-comments": "off",
+    "import/prefer-default-export": "off",
+    "require-hook": "off",
+    "curly": "off",
     "no-inline-comments": "off",
-    "max-statements": "off"
+    "unicorn/switch-case-braces": "off",
+    "jest/prefer-strict-equal": "off",
+    "jest/prefer-lowercase-title": "off",
+    "jest/max-expects": "off",
+    "jest/consistent-test-it": "off",
+    "jest/prefer-to-be": "off",
+    "jest/no-hooks": "off",
+    "jest/require-top-level-describe": "off",
+    "jest/prefer-each": "off",
+    "unicorn/catch-error-name": "off",
+    "max-dependencies": "off",
+    "no-negated-condition": "off",
+    "unicorn/prefer-global-this": "off",
+    "no-unsafe-type-assertion": "off",
+    "unicorn/prefer-spread": "off",
+    "func-names": "off",
+    "prefer-top-level-await": "off",
+    "no-unassigned-import": "off",
+    "no-namespace": "off",
+    "max-params": "off",
+    "no-async-endpoint-handlers": "off",
+    "max-classes-per-file": "off",
+    "no-warning-comments": "off",
+    "eqeqeq": "off",
+    "consistent-type-imports": "off",
+    "prefer-template": "off",
+    "unicorn/numeric-separators-style": "off",
+    "arrow-body-style": "off",
+    "prefer-destructuring": "off",
+    "no-inferrable-types": "off",
+    "avoid-new": "off",
+    "require-typed-ref": "off",
+    "prefer-await-to-then": "off",
+    "no-array-sort": "off",
+    "prefer-await-to-callbacks": "off",
+    "no-else-return": "off",
+    "init-declarations": "off",
+    "always-return": "off",
+    "radix": "off",
+    "no-await-in-loop": "off",
+    "prefer-string-slice": "off",
+    "unicorn/no-immediate-mutation": "off",
+    "no-unnecessary-array-flat-depth": "off",
+    "no-nested-ternary": "off",
+    "unicorn/no-nested-ternary": "off",
+    "no-continue": "off",
+    "default-param-last": "off",
+    "no-unnecessary-parameter-property-assignment": "off",
+    "no-lonely-if": "off",
+    "no-useless-undefined": "off",
+    "no-new-array": "off",
+    "number-literal-case": "off",
+    "max-depth": "off",
+    "unicorn/no-array-reverse": "off",
+    "unicorn/prefer-string-replace-all": "off",
+    "prefer-enum-initializers": "off",
+    "prefer-math-trunc": "off",
+    "unicorn/require-post-message-target-origin": "off",
+    "default": "off",
+    "new-cap": "off",
+    "no-mutable-exports": "off",
+    "param-names": "off",
+    "consistent-function-scoping": "off",
+    "no-anonymous-default-export": "off",
+    "sort-vars": "off",
+    "no-map-spread": "off",
+    "unicorn/no-useless-spread": "off",
+    "no-unsafe-enum-comparison": "off",
+    "strict-boolean-expressions": "off",
+    "switch-exhaustiveness-check": "off",
+    "return-await": "off"
   },
   "ignorePatterns": [
     "**/tailwind.config.cjs",
@@ -74,7 +113,6 @@
     "**/vite.config.ts",
     "**/postcss.config.js",
     "**/tailwind.config.js",
-    "**/eslint.config.mjs",
     "cmd/frontend/resources/**/*",
     "dashboard/new-dashboard/src/components/common/BranchIcon.vue",
     "dashboard/new-dashboard/src/components/common/SpaceIcon.vue",
