--- a/package.json
+++ b/package.json
@@ -6,30 +6,21 @@
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
     "//": "pnpm vue-tsc --noEmit && ",
-    "lint": "NODE_ENV=production eslint 'dashboard/*/{src,tests}/**/*.{ts,vue}'",
+    "lint": "oxlint",
     "update-deps": "pnpm update -i -r --latest",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.2",
     "@primevue/auto-import-resolver": "^4.5.4",
     "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^6.0.4",
-    "@vue/eslint-config-typescript": "^14.6.0",
-    "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.5",
-    "eslint-plugin-unicorn": "^62.0.0",
-    "eslint-plugin-vue": "^10.7.0",
-    "globals": "^17.3.0",
     "isoworker": "^0.2.4",
     "oxfmt": "^0.28.0",
     "oxlint": "^1.43.0",
+    "oxlint-tsgolint": "^0.11.5",
     "rollup": "^4.57.1",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.54.0",
     "unplugin-vue-components": "^31.0.0",
     "vite": "npm:rolldown-vite@latest",
     "vite-plugin-static-copy": "^3.2.0",
