--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -13,97 +13,97 @@
     "browser": true
   },
   "rules": {
-    "no-relative-parent-imports": "off",
-    "no-null": "off",
-    "no-magic-numbers": "off",
-    "max-statements": "off",
-    "sort-keys": "off",
-    "no-named-export": "off",
-    "no-ternary": "off",
-    "id-length": "off",
-    "unicorn/no-null": "off",
-    "unicorn/filename-case": "off",
-    "sort-imports": "off",
-    "exports-last": "off",
-    "max-lines": "off",
-    "group-exports": "off",
-    "max-lines-per-function": "off",
-    "func-style": "off",
-    "capitalized-comments": "off",
-    "import/prefer-default-export": "off",
-    "require-hook": "off",
-    "curly": "off",
-    "no-inline-comments": "off",
-    "unicorn/switch-case-braces": "off",
-    "jest/prefer-strict-equal": "off",
-    "jest/prefer-lowercase-title": "off",
-    "jest/max-expects": "off",
-    "jest/consistent-test-it": "off",
-    "jest/prefer-to-be": "off",
-    "jest/no-hooks": "off",
-    "jest/require-top-level-describe": "off",
-    "jest/prefer-each": "off",
-    "unicorn/catch-error-name": "off",
-    "max-dependencies": "off",
-    "no-negated-condition": "off",
-    "unicorn/prefer-global-this": "off",
-    "no-unsafe-type-assertion": "off",
-    "unicorn/prefer-spread": "off",
-    "func-names": "off",
-    "prefer-top-level-await": "off",
-    "no-unassigned-import": "off",
-    "no-namespace": "off",
-    "max-params": "off",
-    "no-async-endpoint-handlers": "off",
-    "max-classes-per-file": "off",
-    "no-warning-comments": "off",
-    "eqeqeq": "off",
-    "consistent-type-imports": "off",
-    "prefer-template": "off",
-    "unicorn/numeric-separators-style": "off",
-    "arrow-body-style": "off",
-    "prefer-destructuring": "off",
-    "no-inferrable-types": "off",
-    "avoid-new": "off",
-    "require-typed-ref": "off",
-    "prefer-await-to-then": "off",
-    "no-array-sort": "off",
-    "prefer-await-to-callbacks": "off",
-    "no-else-return": "off",
-    "init-declarations": "off",
     "always-return": "off",
-    "radix": "off",
-    "no-await-in-loop": "off",
-    "prefer-string-slice": "off",
-    "unicorn/no-immediate-mutation": "off",
-    "no-unnecessary-array-flat-depth": "off",
-    "no-nested-ternary": "off",
-    "unicorn/no-nested-ternary": "off",
-    "no-continue": "off",
+    "arrow-body-style": "off",
+    "avoid-new": "off",
+    "capitalized-comments": "off",
+    "consistent-function-scoping": "off",
+    "consistent-type-imports": "off",
+    "curly": "off",
+    "default": "off",
     "default-param-last": "off",
-    "no-unnecessary-parameter-property-assignment": "off",
-    "no-lonely-if": "off",
-    "no-useless-undefined": "off",
-    "no-new-array": "off",
-    "number-literal-case": "off",
+    "eqeqeq": "off",
+    "exports-last": "off",
+    "func-names": "off",
+    "func-style": "off",
+    "group-exports": "off",
+    "id-length": "off",
+    "import/prefer-default-export": "off",
+    "init-declarations": "off",
+    "jest/consistent-test-it": "off",
+    "jest/max-expects": "off",
+    "jest/no-hooks": "off",
+    "jest/prefer-each": "off",
+    "jest/prefer-lowercase-title": "off",
+    "jest/prefer-strict-equal": "off",
+    "jest/prefer-to-be": "off",
+    "jest/require-top-level-describe": "off",
+    "max-classes-per-file": "off",
+    "max-dependencies": "off",
     "max-depth": "off",
-    "unicorn/no-array-reverse": "off",
-    "unicorn/prefer-string-replace-all": "off",
+    "max-lines": "off",
+    "max-lines-per-function": "off",
+    "max-params": "off",
+    "max-statements": "off",
+    "new-cap": "off",
+    "no-anonymous-default-export": "off",
+    "no-array-sort": "off",
+    "no-async-endpoint-handlers": "off",
+    "no-await-in-loop": "off",
+    "no-continue": "off",
+    "no-else-return": "off",
+    "no-inferrable-types": "off",
+    "no-inline-comments": "off",
+    "no-lonely-if": "off",
+    "no-magic-numbers": "off",
+    "no-map-spread": "off",
+    "no-mutable-exports": "off",
+    "no-named-export": "off",
+    "no-namespace": "off",
+    "no-negated-condition": "off",
+    "no-nested-ternary": "off",
+    "no-new-array": "off",
+    "no-null": "off",
+    "no-relative-parent-imports": "off",
+    "no-ternary": "off",
+    "no-unassigned-import": "off",
+    "no-unnecessary-array-flat-depth": "off",
+    "no-unnecessary-parameter-property-assignment": "off",
+    "no-unsafe-enum-comparison": "off",
+    "no-unsafe-type-assertion": "off",
+    "no-useless-undefined": "off",
+    "no-warning-comments": "off",
+    "number-literal-case": "off",
+    "param-names": "off",
+    "prefer-await-to-callbacks": "off",
+    "prefer-await-to-then": "off",
+    "prefer-destructuring": "off",
     "prefer-enum-initializers": "off",
     "prefer-math-trunc": "off",
-    "unicorn/require-post-message-target-origin": "off",
-    "default": "off",
-    "new-cap": "off",
-    "no-mutable-exports": "off",
-    "param-names": "off",
-    "consistent-function-scoping": "off",
-    "no-anonymous-default-export": "off",
-    "no-map-spread": "off",
-    "unicorn/no-useless-spread": "off",
-    "no-unsafe-enum-comparison": "off",
+    "prefer-string-slice": "off",
+    "prefer-template": "off",
+    "prefer-top-level-await": "off",
+    "radix": "off",
+    "require-hook": "off",
+    "require-typed-ref": "off",
+    "return-await": "off",
+    "sort-imports": "off",
+    "sort-keys": "off",
     "strict-boolean-expressions": "off",
     "switch-exhaustiveness-check": "off",
-    "return-await": "off"
+    "unicorn/catch-error-name": "off",
+    "unicorn/filename-case": "off",
+    "unicorn/no-array-reverse": "off",
+    "unicorn/no-immediate-mutation": "off",
+    "unicorn/no-nested-ternary": "off",
+    "unicorn/no-null": "off",
+    "unicorn/no-useless-spread": "off",
+    "unicorn/numeric-separators-style": "off",
+    "unicorn/prefer-global-this": "off",
+    "unicorn/prefer-spread": "off",
+    "unicorn/prefer-string-replace-all": "off",
+    "unicorn/require-post-message-target-origin": "off",
+    "unicorn/switch-case-braces": "off"
   },
   "ignorePatterns": [
     "**/tailwind.config.cjs",
